--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learning</p>
+            <!--<p>My Learning</p>-->
+            <div class="my_learning">
+                <p>My Learning</p>
+                 
+                <div class="my_learning__popup">
+                    <p>You did not purchase anything yet </p>
+                </div>
+               
+            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
@@ -48,6 +56,11 @@
     <!--sales-image-->
     <div class="sales-image">
         <img src="./images/sales image.png">
+        <div class="sales-image__offers">
+            <h1>Live course offers are going </h1>
+            <p>Udemy courses are available now @499/-. </p>
+            <p>Grab the offer soon</p>
+        </div>
 
     </div>
     <!--recommended-->
